<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button15"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn_x2"
        app:layout_constraintStart_toEndOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button16"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="23dp"
        android:text="@string/btn_8"
        app:layout_constraintStart_toEndOf="@+id/button23"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button17"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:text="@string/btn_5"
        app:layout_constraintStart_toEndOf="@+id/button22"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button18"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="22dp"
        android:text="@string/btn_2"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button19"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="27dp"
        android:text="@string/btn_0"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button20"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="27dp"
        android:text="@string/btn_mas_menos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <Button
        android:id="@+id/button21"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="23dp"
        android:text="@string/btn_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/button22"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="25dp"
        android:text="@string/btn_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <Button
        android:id="@+id/button23"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="23dp"
        android:text="@string/btn_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button24" />

    <Button
        android:id="@+id/button24"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn_1_x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="339dp"
        android:layout_height="73dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="17dp"
        android:allowUndo="false"
        android:text="Calculadora_Android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="37dp"
        android:text="@string/btnPorcentaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="37dp"
        android:text="@string/btn_CE"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="37dp"
        android:text="@string/btn_C"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button10"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn_raiz"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button11"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="23dp"
        android:text="@string/btn_9"
        app:layout_constraintStart_toEndOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button12"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:text="@string/btn_6"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button13"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="23dp"
        android:text="@string/btn_3"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button14"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="26dp"
        android:text="@string/btn_punto"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="37dp"
        android:text="@string/btn_borrar"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn_div"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_por"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_menos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_mas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_Igual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

</androidx.constraintlayout.widget.ConstraintLayout>